<resources>
    <string name="app_name">BLE</string>
    <string name="bt_title">蓝牙连接</string>
    <string name="bt_number">序号</string>
    <string name="bt_name">蓝牙名称</string>
    <string name="bt_nick_name">昵称</string>
    <string name="bt_state">连接状态</string>
    <string name="bt_connect">连接</string>
    <string name="bt_state_connected">已连接</string>
    <string name="bt_state_notconnect">未连接</string>
    <string name="bt_state_connecting">正在连接蓝牙</string>
    <string name="bt_connect_succuess">连接成功</string>
    <string name="bt_connect_failed">连接失败</string>
    <string name="bind_bt_device">绑定蓝牙设备</string>
    <string name="language">语言选择</string>
    <string name="language_zh">简体中文</string>
    <string name="language_eg">繁体中文</string>
    <string name="language_cn">英文</string>
    <string name="temper">温度单位</string>
    <string name="temper_hua">华式</string>
    <string name="temper_she">摄式</string>
    <string name="pressure">压力单位 </string>
    <string name="pressure_1">BAR</string>
    <string name="pressure_2">PSI</string>
    <string name="pressure_3">KPA</string>
    <string name="pressure_4">KG</string>

    <string name="noise_switch">警报声开关</string>
    <string name="noise_switch_on">警报声开关已打开</string>
    <string name="noise_switch_off">警报声开关已关闭</string>

    <string name="shake_switch">震动开关</string>
    <string name="shake_switch_on">震动开关打开</string>
    <string name="shake_switch_off">震动开关关闭</string>

    <string name="OBD_switch">电池电量开关</string>
    <string name="OBD_switch_on">电池电量开关打开</string>
    <string name="OBD_switch_off">电池电量开关关闭</string>

    <string name="pressure_max">压力报警上限</string>
    <string name="pressure_min">压力报警下限</string>
    <string name="pressure_changed">压力区间已经修改</string>
    <string name="temper_max">温度警报上限</string>
    <string name="temper_max_change">温度警报上限已调整</string>

    <string name="unknown_service">未知的服务</string>
    <string name="unknown_characteristic">未知的特征</string>
    <string name="setting_bt_nickname">蓝牙昵称</string>
    <string name="setting_padd">操作密码</string>
    <string name="setting_cartype">选择车型</string>
    <string name="button_confirm">确定</string>
    <string name="button_cancle">取消</string>


    <string name="handle_wheel">操作</string>
    <string name="app_settings">设置</string>
    <string name="back_to_pre">返回</string>
    <string name="danger_info">危险</string>
    <string name="saveinfo">正常</string>


</resources>
