<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:paddingLeft="2dp"
    android:paddingRight="2dp"
    >
    <com.yy.gg.ble.fragments.DiyRefreshbar
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAlignment="center"
        android:alpha="0.8"
        >
    <TextView
    android:id="@+id/number"
    android:layout_height="wrap_content"
    android:layout_width="wrap_content"
    android:text="@string/bt_number"
    android:textAlignment="center"
    android:layout_weight="1"
    />
    <TextView
        android:id="@+id/btname"
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:text="@string/bt_name"
        android:textAlignment="center"
        android:layout_weight="1"
        />
    <TextView
        android:id="@+id/btnickname"
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:text="@string/bt_nick_name"
        android:textAlignment="center"
        android:layout_weight="1"
        />
    <TextView
        android:id="@+id/btstate"
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:text="@string/bt_state"
        android:textAlignment="center"
        android:layout_weight="1"
        />
    <TextView
        android:id="@+id/btcon"
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:text="@string/bt_connect"
        android:textAlignment="center"
        android:layout_weight="1"
        />
        </LinearLayout>
    <ListView
        android:id="@+id/bt_list"
        android:layout_height="match_parent"
        android:layout_width="match_parent"
        android:background="@drawable/setting_bg"
        />
</LinearLayout>
